--- a/week-5/characters.html
+++ b/week-5/characters.html
@@ -1,18 +1,4 @@
-story_format = "Started life as {story_start_var} and later {story_end_var}. As a result they feels {consequence_var}."
-
-csv_format = '"{fullRandomName}","{age}","{story}"\n'
-
-html_body_template = """
-    <div class="character-info">
-        <p class="character-name">{fullRandomName}</p>
-        <p>Age: {age}</p>
-        <div class="character-story">
-            <p>{story}</p>
-        </div>
-    </div>
-"""
-
-html_template = """<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -20,34 +6,41 @@ html_template = """<!DOCTYPE html>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         /* Set A5 page size */
-        @page {{
+        @page {
             size: A5;
-        }}
+        }
         /* Set card dimensions and margin */
-        body {{
+        body {
             width: 148mm;
             height: 210mm;
             margin: 0;
             padding: 10mm;
-        }}
+        }
         /* Style for character information */
-        .character-info {{
+        .character-info {
             font-family: Arial, sans-serif;
             font-size: 16px;
             line-height: 1.5;
-        }}
+        }
         /* Style for character name */
-        .character-name {{
+        .character-name {
             font-weight: bold;
-        }}
+        }
         /* Style for character background story */
-        .character-story {{
+        .character-story {
             margin-top: 10mm;
-        }}
+        }
     </style>
 </head>
 <body>
-{body}
+
+    <div class="character-info">
+        <p class="character-name">Zorin Troooble</p>
+        <p>Age: 37</p>
+        <div class="character-story">
+            <p>Started life as a plumber and later ate a whole box of donuts. As a result they feels increasingly obsessed with flower arranging.</p>
+        </div>
+    </div>
+
 </body>
 </html>
-"""
